--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@prisma/client": "4.16.0",
     "@vue/apollo-composable": "^4.0.0-beta.7",
     "graphql": "^16.6.0",
