--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finalallconnect",
+  "name": "foxbaserecommendation",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -30,20 +30,18 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^2.0.1",
-    "@types/jest": "^29.5.2",
     "@types/node": "^18.16.17",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jsdom": "^22.1.0",
+    "jsdom-global": "^3.0.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "prisma": "4.16.0",
     "tailwindcss": "^3.3.2",
-    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "ts-node-dev": "2.0.0",
     "typescript": "~5.0.4",
@@ -52,13 +50,5 @@
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "jsdom",
-    "modulePaths": [
-      "<rootDir>"
-    ],
-    "rootDir": "."
   }
 }
